--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,31 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+    tools:context=".SearchActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/home_toolbar"
+        android:id="@+id/search_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        app:title="@string/home"
+        app:title="@string/search"
         app:titleTextColor="@android:color/white"
         android:background="@color/colorPrimary"
         android:elevation="4dp"/>
 
     <TextView
+        android:id="@+id/search_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/home"
+        android:text="@string/search"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
-        app:layout_constraintBottom_toTopOf="@id/home_bottom_nav"
+        app:layout_constraintBottom_toTopOf="@id/search_bottom_nav"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_toolbar" />
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/home_bottom_nav"
+        android:id="@+id/search_bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="@drawable/main_bottom_nav_shadow"
