--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,16 @@
 
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/home_toolbar"
+        android:id="@+id/sign_in_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         app:title="@string/home"
         app:titleTextColor="@android:color/white"
         android:background="@color/colorPrimary"
-        android:elevation="4dp"/>
+        android:elevation="4dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,7 +25,7 @@
         android:text="@string/home"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
+        app:layout_constraintTop_toBottomOf="@id/sign_in_toolbar"
         app:layout_constraintBottom_toTopOf="@id/home_bottom_nav"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
