--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,34 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/sign_in_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        app:title="@string/home"
-        app:titleTextColor="@android:color/white"
-        android:background="@color/colorPrimary"
-        android:elevation="4dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
-
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="@string/home"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/sign_in_toolbar"
-        app:layout_constraintBottom_toTopOf="@id/home_bottom_nav"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/home_bottom_nav" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/home_bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="?attr/actionBarSize"
         android:background="@drawable/main_bottom_nav_shadow"
         app:itemIconTint="@drawable/selector_main_bottom_nav"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,5 +30,35 @@
         app:layout_constraintRight_toRightOf="parent"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/main_bottom_navigation_menu"/>
+
+    <Button
+        android:id="@+id/main_sign_in_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/register_sign_in_button"
+        android:text="@string/sign_in"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/main_register_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/register_sign_in_button"
+        android:text="@string/register"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/home_bottom_nav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_sign_in_button" />
 
 </android.support.constraint.ConstraintLayout>
