--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,15 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ProfileActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/profile_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        app:title="@string/profile"
-        app:titleTextColor="@android:color/white"
-        android:background="@color/colorPrimary"
-        android:elevation="4dp"/>
-
     <TextView
         android:id="@+id/profile_text_view"
         android:layout_width="wrap_content"
@@ -23,14 +14,14 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/profile_bottom_nav"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_toolbar" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/profile_bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="?attr/actionBarSize"
         android:background="@drawable/main_bottom_nav_shadow"
         app:itemIconTint="@drawable/selector_main_bottom_nav"
         app:layout_constraintBottom_toBottomOf="parent"
