--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
 
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/register_name_text_view"
+            android:id="@+id/register_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
@@ -24,6 +24,7 @@
             app:layout_constraintBottom_toTopOf="@id/guideline">
 
             <EditText
+                android:id="@+id/register_name_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/name"
@@ -33,7 +34,7 @@
 
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/register_email_text_view"
+            android:id="@+id/register_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
@@ -41,9 +42,10 @@
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/register_name_text_view">
+            app:layout_constraintTop_toBottomOf="@id/register_name">
 
             <EditText
+                android:id="@+id/register_email_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
@@ -53,17 +55,18 @@
 
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/register_password_text_view"
+            android:id="@+id/register_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="@+id/register_email_text_view"
-            app:layout_constraintStart_toStartOf="@+id/register_email_text_view"
-            app:layout_constraintTop_toBottomOf="@+id/register_email_text_view">
+            app:layout_constraintEnd_toEndOf="@+id/register_email"
+            app:layout_constraintStart_toStartOf="@+id/register_email"
+            app:layout_constraintTop_toBottomOf="@+id/register_email">
 
             <EditText
+                android:id="@+id/register_password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
@@ -72,6 +75,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <Button
+            android:id="@+id/register_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
@@ -82,9 +86,9 @@
             android:text="@string/register"
             android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/register_password_text_view"
-            app:layout_constraintStart_toStartOf="@+id/register_password_text_view"
-            app:layout_constraintTop_toBottomOf="@+id/register_password_text_view" />
+            app:layout_constraintEnd_toEndOf="@+id/register_password"
+            app:layout_constraintStart_toStartOf="@+id/register_password"
+            app:layout_constraintTop_toBottomOf="@+id/register_password" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
