--- a/app/src/main/res/layout/activity_signed_in.xml
+++ b/app/src/main/res/layout/activity_signed_in.xml
@@ -11,24 +11,24 @@
         android:id="@+id/email_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="32dp"
         android:text="Email"
         android:textColor="@android:color/darker_gray"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/name_label"
-        app:layout_constraintTop_toBottomOf="@+id/name_label" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/email_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/email_label"
-        app:layout_constraintStart_toEndOf="@+id/email_label"
+        app:layout_constraintStart_toStartOf="@+id/email_label"
         app:layout_constraintTop_toBottomOf="@+id/email_label" />
 </android.support.constraint.ConstraintLayout>
