--- a/app/src/main/res/layout/activity_register_two.xml
+++ b/app/src/main/res/layout/activity_register_two.xml
@@ -2,14 +2,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    tools:context=".RegisterActivity">
+    android:layout_width="match_parent">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:context=".RegisterTwoActivity">
 
 
         <android.support.design.widget.TextInputLayout
@@ -21,7 +20,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/one_last_step_text_view">
 
             <EditText
                 android:id="@+id/register_name_edit_text"
@@ -34,57 +33,15 @@
 
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/register_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/register_name">
-
-            <EditText
-                android:id="@+id/register_email_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_email"
-                android:inputType="textEmailAddress" />
-
-        </android.support.design.widget.TextInputLayout>
-
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/register_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="@+id/register_email"
-            app:layout_constraintStart_toStartOf="@+id/register_email"
-            app:layout_constraintTop_toBottomOf="@+id/register_email">
-
-            <EditText
-                android:id="@+id/register_password_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_password"
-                android:inputType="textPassword" />
-
-        </android.support.design.widget.TextInputLayout>
-
-
-        <android.support.design.widget.TextInputLayout
             android:id="@+id/register_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="@+id/register_password"
-            app:layout_constraintStart_toStartOf="@+id/register_password"
-            app:layout_constraintTop_toBottomOf="@id/register_password">
+            app:layout_constraintEnd_toEndOf="@+id/register_name"
+            app:layout_constraintStart_toStartOf="@+id/register_name"
+            app:layout_constraintTop_toBottomOf="@id/register_name">
 
             <EditText
                 android:id="@+id/register_location_edit_text"
@@ -112,42 +69,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_bio"
-                android:inputType="textMultiLine"/>
+                android:inputType="textMultiLine" />
 
         </android.support.design.widget.TextInputLayout>
 
-
         <Button
-            android:id="@+id/register_button"
+            android:id="@+id/continue_two_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/register_sign_in_button"
-            android:text="@string/register"
+            android:text="@string/continue_two"
             android:textColor="@color/colorPrimary"
-            app:layout_constraintEnd_toEndOf="@+id/register_password"
-            app:layout_constraintStart_toStartOf="@+id/register_password"
-            app:layout_constraintTop_toBottomOf="@id/register_bio" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/register_bio"
+            app:layout_constraintStart_toStartOf="@+id/register_bio"
+            app:layout_constraintTop_toBottomOf="@+id/register_bio" />
 
-        <Button
-            android:id="@+id/already_registered_button"
-            style="?android:attr/borderlessButtonStyle"
+        <TextView
+            android:id="@+id/one_last_step_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/already_registered"
-            android:textColor="@color/colorLinkBlue"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/register_button"
-            app:layout_constraintStart_toStartOf="@+id/register_button"
-            app:layout_constraintTop_toBottomOf="@+id/register_button" />
-
+            android:layout_marginTop="24dp"
+            android:text="@string/one_last_step"
+            android:textSize="20sp"
+            android:textColor="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
+
 
 </ScrollView>
