--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,7 +21,7 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/profile_bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="?android:attr/actionBarSize"
         android:background="@drawable/main_bottom_nav_shadow"
         app:itemIconTint="@drawable/selector_main_bottom_nav"
         app:layout_constraintBottom_toBottomOf="parent"
