--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:background="@drawable/register_sign_in_button"
+        android:background="@drawable/round_button"
         android:text="Sign Out"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/home_bottom_nav"
