--- a/app/src/main/res/layout/activity_register_one.xml
+++ b/app/src/main/res/layout/activity_register_one.xml
@@ -61,7 +61,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            android:background="@drawable/register_sign_in_button"
+            android:background="@drawable/round_button"
             android:text="@string/continue_one"
             android:textColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="@+id/register_password"
