--- a/app/src/main/res/layout/activity_register_two.xml
+++ b/app/src/main/res/layout/activity_register_two.xml
@@ -82,7 +82,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            android:background="@drawable/register_sign_in_button"
+            android:background="@drawable/round_button"
             android:text="@string/continue_two"
             android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
