--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:background="@drawable/register_sign_in_button"
+        android:background="@drawable/round_button"
         android:text="@string/search"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/search_edit_text"
