--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -59,7 +59,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            android:background="@drawable/register_sign_in_button"
+            android:background="@drawable/round_button"
             android:text="@string/sign_in"
             android:textColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="@+id/sign_in_password"
