Finish implementing asking questions.

--- a/app/src/main/res/layout/activity_answer_question.xml
+++ b/app/src/main/res/layout/activity_answer_question.xml
@@ -6,4 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".AnswerQuestionActivity">
 
+    <TextView
+        android:id="@+id/answer_question_question_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="64dp"
+        tools:text="TextView"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/answer_question_answer_edit_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:hint="@string/your_answer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/answer_question_question_text_view" />
+
+    <Button
+        android:id="@+id/answer_question_answer_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/answer"
+        android:background="@drawable/round_button"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/answer_question_answer_edit_text" />
 </android.support.constraint.ConstraintLayout>
