--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -81,11 +81,12 @@
         android:id="@+id/user_profile_follow_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="15dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/follow"
         android:background="@drawable/round_button"
+        android:padding="15dp"
+        android:text="@string/follow"
         android:textColor="@color/colorAccent"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/user_profile_name" />
 
@@ -110,6 +111,29 @@
         android:text="@string/ask"
         android:background="@drawable/round_button"
         android:textColor="@color/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/user_profile_ask_question_edit_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/user_profile_ask_question_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/user_profile_ask_question_edit_text" />
+
+    <ProgressBar
+        android:id="@+id/user_profile_follow_progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/user_profile_name" />
+
+    <ProgressBar
+        android:id="@+id/user_profile_ask_progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/user_profile_ask_question_edit_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/user_profile_ask_question_edit_text"
