--- a/app/src/main/res/layout/activity_register_one.xml
+++ b/app/src/main/res/layout/activity_register_one.xml
@@ -13,7 +13,7 @@
 
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/register_email"
+            android:id="@+id/update_your_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
@@ -40,9 +40,9 @@
             android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="@+id/register_email"
-            app:layout_constraintStart_toStartOf="@+id/register_email"
-            app:layout_constraintTop_toBottomOf="@+id/register_email">
+            app:layout_constraintEnd_toEndOf="@+id/update_your_name"
+            app:layout_constraintStart_toStartOf="@+id/update_your_name"
+            app:layout_constraintTop_toBottomOf="@+id/update_your_name">
 
             <EditText
                 android:id="@+id/register_password_edit_text"
